@@ -7,10 +7,5 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry exported="true" kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?ivyXmlPath=ivy.xml&amp;confs=javase%2Cide%2Ctest"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/openmeap-shared"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/openmeap-shared-serverside"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/openmeap-admin-web"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/openmeap-services-web"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/openmeap-shared-jdk5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
