@@ -20,7 +20,7 @@
  #                                                                             #
  ###############################################################################
 
-openmeap.revision=1.2.0a
+openmeap.revision=1.1.0a
 openmeap.debug=true
 openmeap.debuglevel=lines\,vars\,source
 openmeap.targetJdk=1.5
