@@ -2,6 +2,7 @@
 [#if deployments??]
 	<table class="application-list">
 		<tr>
+			<th>Creator</th>
 			<th>Date/Time</th>
 			<th>Version</th>
 			<th>Archive Hash</th>
@@ -9,6 +10,7 @@
 		</tr>
 	[#list deployments as depl]
 		<tr>
+			<td>${(depl.creator)!}</td>
 			<td>${depl.createDate?datetime}</td>
 			<td><a href="?bean=addModifyAppVersionPage&applicationId=${depl.application.id}&versionId=${depl.applicationVersion.id}">${depl.applicationVersion.identifier}</a></td>
 			<td><a href="${(depl.downloadUrl)!}">[${(depl.hashAlgorithm)!"NONE"}]${(depl.hash)!"NONE"}</a>
